cart-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-service
  type: LoadBalancer
  ports:
    - name: cart-service
      protocol: TCP
      port: 80
      targetPort: 3003
